# pybraille2text

./: .project  README.md  pyproject.toml
src/: .gitignore
src/pybrl2txt/: __init__.py  braille_maps.py  braille_to_text.py  brl2txt_logging.py  models.py
src/pybrl2txt/utils/: make_dict.py
src/resources/: abbreviations.yml  abbreviations_brl_single_line.yml  brl.yml
tests/: test_all.py  test_all_abbreviations.py  test_camel_case.py  test_spanish.py
tests/resources/: abbreviations-640.yml  abbreviations.txt  abbreviations_brl_single_line.txt  abbreviations_brl_single_line.yml  abbreviations_brl_small.txt  abbreviations_brl_small.yml  alfonsina-es.txt  alfonsina-es.yml  braille-poem-ABC.txt  brl-fr.yml  brl.yml  brl_quant_orig.txt  brl_quant_orig.yml  camel-case.txt  technical_new.txt
